<resources>
    <string name="app_name">Dice Roller</string>
    <string name="action_settings">Settings</string>
    <string name="_1d6">1d6</string>
    <string name="_1d8">1D8</string>
    <string name="_1d10">1d10</string>
    <string name="_1d12">1d12</string>
    <string name="_1d20">1d20</string>
    <string name="_1d4">1D4</string>
    <string name="_0">0</string>
    <string name="welcome">Welcome!</string>
    <string name="timetext">timetext</string>
    <string name="d">d%</string>
</resources>
