<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <Button
        android:id="@+id/d4Button"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_1d4"
        app:layout_constraintBottom_toTopOf="@+id/d6button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/d6button"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_1d6"
        app:layout_constraintBottom_toTopOf="@+id/d8Button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/d8Button"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_1d8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/d10Button"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_1d10"
        app:layout_constraintBottom_toTopOf="@+id/dPercentButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/dPercentButton"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/d"
        app:layout_constraintBottom_toTopOf="@+id/d12Button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/d12Button"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_1d12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/d20Button"
        android:layout_width="175dp"
        android:layout_height="200dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/_1d20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dPercentButton"
        app:layout_constraintStart_toEndOf="@+id/d6button" />

</androidx.constraintlayout.widget.ConstraintLayout>